@@ -55,10 +55,7 @@ protected:
 
 	unsigned short max_kinds;
 
-	short additional_data;  // additional state depending on type:
-	// if type == BACK_FORTH then it is 1 for advancing, and -1 for going back, 0 at the end
-	// if type == LOOPED, then it is the number of loops to be played.
-	// if type == PLAY_ONCE or NONE, this has no meaning.
+	bool reverse_playback;  // only for type == BACK_FORTH
 
 	short times_played; // how often this animation was played (loop counter for type LOOPED)
 
