@@ -54,6 +54,7 @@ Engine fixes:
 * Fixed potential crash if a hazard was created before the map loaded.
 * Fixed infinite loop caused by trying to move an entity before the map loaded.
 * Fix case where sounds may be unloaded prematurely if they were playing during certain sitations.
+* Fix single-frame "back_forth" animations taking an extra frame to complete.
 * Android: Fix 'Flare' directory not being automatically created.
 * Android: Added a dialog to direct the player to the wiki page for installing if no game data is found.
 
